17/02/2022
-Removed workbox, since I am not really using it and the build does not like it

18/02/2022
-Due to lack of documentation Github Issues exist! Workbox is re-added with its fixes, notifications are back and working